Multiresolution behavior when using crease edge #63766

Closed
opened 2019-04-20 23:30:15 +02:00 by Tatsuya oshima · 11 comments

System Information

Operating system: windows10 pro 64bit Version 1803 os build 17134.706
Graphics card: GTX1080ti

Blender Version

Broken: 2.80, b46245470f, 2019-04-17, as found on the splash screen
Worked: (optional)

Short description of error

Multiresolution behavior when using crease edge

Exact steps for others to reproduce the error

1, set the crease edge.
2. Set up multi resolution.
3. Set to sculpt mode.
4. Click Subdivide three times.ezgif.com-video-to-gif.gif

**System Information** Operating system: windows10 pro 64bit Version 1803 os build 17134.706 Graphics card: GTX1080ti **Blender Version** Broken: 2.80, b46245470f79, 2019-04-17, as found on the splash screen Worked: (optional) **Short description of error** Multiresolution behavior when using crease edge **Exact steps for others to reproduce the error** 1, set the crease edge. 2. Set up multi resolution. 3. Set to sculpt mode. 4. Click Subdivide three times.![ezgif.com-video-to-gif.gif](https://archive.blender.org/developer/F6962497/ezgif.com-video-to-gif.gif)
Author

Added subscriber: @TatsuyaOshima

Added subscriber: @TatsuyaOshima

#70630 was marked as duplicate of this issue

#70630 was marked as duplicate of this issue
Sergey Sharybin was assigned by Sebastian Parborg 2019-04-25 12:28:58 +02:00

This issue was referenced by 9f48a04799

This issue was referenced by 9f48a04799fb494520c1121d591e03dc1b01641f

This issue was referenced by 7c9f64d008

This issue was referenced by 7c9f64d008357151ae2e0007172a088d41588dec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by ae6300a8b7

This issue was referenced by ae6300a8b74b487d9c2cbcf18f36719654ac5e72

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Reverted commit since I causes crashes in #66022 (Crash when adding subsurf modifier), and I suspect also these though I could not reproduce them myself:

  • #66027 (crash with 2 modifier)
  • #66018 (Blender 2.80 Crashes when adding Loop cut and sliding while sub surf modifier is present.)
  • #66026 (CTest/Cycles subdiv related failures )
Reverted commit since I causes crashes in #66022 (Crash when adding subsurf modifier), and I suspect also these though I could not reproduce them myself: * #66027 (crash with 2 modifier) * #66018 (Blender 2.80 Crashes when adding Loop cut and sliding while sub surf modifier is present.) * #66026 (CTest/Cycles subdiv related failures )

Added subscriber: @kfoong

Added subscriber: @kfoong

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63766
No description provided.